# Arch-LLM

./: Cargo.toml  GEMINI.md  PKGBUILD  history.json  settings.json
src/: main.rs  state.rs  utils.rs
